--- a/signin.html
+++ b/signin.html
@@ -9,7 +9,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;400;500;700&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="signin.css" />
+        <link rel="stylesheet" href="/css/signin.css" />
     </head>
     <body>
         <div class="iphone-x">
