--- a/singup.html
+++ b/singup.html
@@ -59,9 +59,7 @@
                         Term of Use <mark style="color: #c8c8c8; background-color: white">and</mark> Privacy Policy
                     </p>
                 </div>
-                <div class="sign-in__btn">
-                    <label class="sign-in__label">Sign in</label>
-                </div>
+                <button class="sign-in__btn">Sign up</button>
                 <div class="sign-in__option">
                     <p class="sign-in__option__content">Or sign up with</p>
                 </div>
