--- a/signin.html
+++ b/signin.html
@@ -51,9 +51,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="sign-in__btn">
-                    <label class="sign-in__label">Sign in</label>
-                </div>
+                <button class="sign-in__btn">Sign in</button>
                 <div class="sign-in__option">
                     <p class="sign-in__option__content">Or sign up with</p>
                 </div>
